on SocialLinks i took the hover animations off, on Intro i took off the gsap and added an aria label and i added overflow visible, and on app.css i added a height auto and overflow-y of auto. I think this all together fixed the scrolling issue on the home page

--- a/src/app.css
+++ b/src/app.css
@@ -79,8 +79,9 @@
 html,
 body {
 	width: 100%;
-	height: 100%;
+	height: auto;
 	overflow-x: hidden;
+	overflow-y: auto;
 	background-color: #000;
 }
 
